# Aosp-NativeSurface

./: CMakeLists.txt  README.md
include/: surfaceTools.h
include/Android_data/: ImGuiDraw.hpp
include/Android_draw/: Android_draw.h  init.h
include/Android_touch/: Android_touch.h
include/Android_utils/: Android_utils.h
include/Aosp_surface/: Aosp_surface.h
include/Aosp_surface/aosp_10/: native_surface_10.h
include/Aosp_surface/aosp_11/: native_surface_11.h
include/Aosp_surface/aosp_12/: native_surface_12.h
include/Aosp_surface/aosp_13/: native_surface_13.h
include/icon/: iconfont.h
libs/Ssage/: README.md
outputs/arm64-v8a/: NativeSurface
res/: README.md
res/aosp_native_surface_10/: aosp-native-surface.config  aosp-native-surface.includes
res/aosp_native_surface_10/src/: aosp_surface.cpp
res/aosp_native_surface_11/src/: aosp_surface.cpp  oxorany.h
res/aosp_native_surface_12/src/: aosp_surface.cpp  aosp_surface.h
res/aosp_native_surface_13/: Android.bp
res/aosp_native_surface_13/src/: aosp_surface.cpp  oxorany.cpp
src/: native_surface.cpp
src/Android_draw/: Android_draw.cpp  init.cpp
src/Android_touch/: Android_touch.cpp
src/Android_utils/: Android_utils.cpp
src/Android_utils/And64InlineHook/: And64InlineHook.cpp
src/Aosp_surface/: Aosp_surface.cpp
src/ImGui/: stb_image.cpp
